--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,6 +5,6 @@ header{
 .page {
   width: 960;
 }
-#planetdata {
-  text-align: center;
+#planetdata table, th, td {
+  border: 1px solid black;  
 }
