--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,7 +6,7 @@ header{
   border: 1px solid red;  
 }
 body {
-  background: url (new-zeland-and-australia-seen-from-outer-space-istock.jpg);
+  background: url (http://cdn2.list25.com/wp-content/uploads/2014/11/outerspace.jpg);
 }
 #planetdata {
   margin: 25%;
