--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,7 +6,7 @@ header{
   border: 3px solid red;  
 }
 body {
-  background-image: url (http://cdn2.list25.com/wp-content/uploads/2014/11/outerspace.jpg);
+  background: color dimgray; 
 }
 #planetdata {
   margin: 25%;
