--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,7 +6,7 @@ header{
   border: 3px solid red;  
 }
 body {
-  background: color dimgray; 
+  background: dimgray; 
 }
 #planetdata {
   margin: 25%;
