--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,6 +8,10 @@ header{
 body {
   background: dimgray; 
 }
+#space {
+  margin: 10%;
+  margin-bottom: 10%;
+}
 #planetdata {
   margin: 25%;
   padding: 5%;
