--- a/stylesheet.css
+++ b/stylesheet.css
@@ -29,7 +29,7 @@ body {
   padding: 5%;
 }
 footer {
-  background: midnight blue;
+  background: 7FFFD4;
   text-align: center;
   font-size: x-large;
 }
